// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostReadList should render with ltr bengali items with correct dir 1`] = `
.c2 {
  position: relative;
}

.c8 {
  color: #222222;
  font-size: 1.625rem;
  line-height: 1.875rem;
  font-family: "Shonar Bangla",Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
}

.c6 {
  font-family: "Shonar Bangla",Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #B80000;
  font-size: 2rem;
  line-height: 2.25rem;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: 3rem;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c3 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

@media (max-width:14.9375rem) {
  .c2 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin: 0 -0.5rem;
  }
}

@supports (display:grid) {
  .c2 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c4 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c4 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    margin: 0 0.25rem;
    width: calc(50% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c4 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c4 {
    margin: 0 0.5rem;
    width: calc(20% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c4 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .c1 {
    padding: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.625rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (min-width:80rem) {
  .c7 {
    padding-top: 0.5rem;
    padding-left: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (max-width:24.9375rem) {
  .c3 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
      dir="ltr"
    >
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ১
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ২
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ৩
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ৪
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ৫
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ৬
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ৭
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ৮
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ৯
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ১০
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with ltr burmese items with correct dir 1`] = `
.c2 {
  position: relative;
}

.c8 {
  color: #222222;
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
}

.c6 {
  font-family: Padauk,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #B80000;
  font-size: 2rem;
  line-height: 2.25rem;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: 3rem;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c3 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

@media (max-width:14.9375rem) {
  .c2 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin: 0 -0.5rem;
  }
}

@supports (display:grid) {
  .c2 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c4 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c4 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    margin: 0 0.25rem;
    width: calc(50% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c4 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c4 {
    margin: 0 0.5rem;
    width: calc(20% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c4 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .c1 {
    padding: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.25rem;
    line-height: 1.875rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.625rem;
    line-height: 2.75rem;
  }
}

@media (min-width:80rem) {
  .c7 {
    padding-top: 0.5rem;
    padding-left: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 4.125rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 5.375rem;
  }
}

@media (max-width:24.9375rem) {
  .c3 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
      dir="ltr"
    >
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ၁
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ၂
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ၃
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ၄
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ၅
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ၆
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ၇
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ၈
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ၉
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ၁၀
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with ltr news items with correct dir 1`] = `
.c2 {
  position: relative;
}

.c8 {
  color: #222222;
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
}

.c6 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  color: #B80000;
  font-size: 2rem;
  line-height: 2.25rem;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: 3rem;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c3 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

@media (max-width:14.9375rem) {
  .c2 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin: 0 -0.5rem;
  }
}

@supports (display:grid) {
  .c2 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c4 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c4 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    margin: 0 0.25rem;
    width: calc(50% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c4 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c4 {
    margin: 0 0.5rem;
    width: calc(20% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c4 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .c1 {
    padding: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:80rem) {
  .c7 {
    padding-top: 0.5rem;
    padding-left: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (max-width:24.9375rem) {
  .c3 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
      dir="ltr"
    >
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            1
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            2
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            3
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            4
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            5
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            6
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            7
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            8
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            9
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            10
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
    </div>
  </div>
</ol>
`;

exports[`MostReadList should render with rtl arabic items with correct dir 1`] = `
.c2 {
  position: relative;
}

.c8 {
  color: #222222;
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-right: 1rem;
}

.c6 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #B80000;
  font-size: 2rem;
  line-height: 2.25rem;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: 3rem;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c3 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

@media (max-width:14.9375rem) {
  .c2 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    margin: 0 -0.25rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    margin: 0 -0.5rem;
  }
}

@media (min-width:80rem) {
  .c2 {
    margin: 0 -0.5rem;
  }
}

@supports (display:grid) {
  .c2 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c4 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c4 {
    margin: 0 0.25rem;
    width: calc(100% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    margin: 0 0.25rem;
    width: calc(50% - 0.5rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c4 {
    margin: 0 0.5rem;
    width: calc(50% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c4 {
    margin: 0 0.5rem;
    width: calc(20% - 1rem);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c4 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@supports (display:grid) {
  .c1 {
    padding: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@media (min-width:80rem) {
  .c7 {
    padding-top: 0.5rem;
    padding-right: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (max-width:24.9375rem) {
  .c3 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

<ol
  class="c0"
  role="list"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
      dir="rtl"
    >
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۱
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۲
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۳
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۴
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۵
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۶
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۷
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۸
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۹
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۱۰
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
    </div>
  </div>
</ol>
`;
